Bug #61038	unpack("a5", "str\0\0") does not work as expected

Added new "Z" argument to pack/unpack, now allowing "a" to return
data without stripping, and "A" strips all trailing white space,
while "Z" will strip everything after the first null.